app/assets/stylesheets/shared/observation_fields.scss
@import "../colors";
.ObservationFieldInput {
  .observation-field {
    margin-bottom: 20px;
    textarea {
      min-height: 125px;
      border-radius: 3px;
    }
    .form-group {
      margin-bottom: 10px;
    }
    .input-group-btn {
      vertical-align: top;
    }
    &.editing {
      background: #eef5e0;
      padding: 10px;
      .field-name {
        margin: 0px 0px 10px;
      }
      button {
        color: #fff;
        background: $inat-green;
        &:hover {
          color: #fff;
          background: $inat-green;
        }
      }
    }
    .btn.standalone {
      margin-right: 10px;
    }
  }
  .field-name {
    font-size: 16px;
    margin: 15px 0px 10px;
  }
}

.ObservationFieldValue {
  margin-bottom: 10px;
  overflow: hidden;
  text-overflow: ellipsis;
  .field {
    font-weight: 700;
    display: inline;
    margin-right: 5px;
    cursor: pointer;
  }
  .value {
    display: inline;
    .dna {
      font-family: inherit;
    }
    .glyphicon-remove-circle {
      cursor: pointer;
    }
  }
}

.ObservationFieldPopover.popover, .AnnotationPopover.popover {
  padding: 0px !important;
  max-width: 350px;
  .popover-content {
    padding: 0px;
  }
  .info, .edit, .added-by {
    padding: 12px 14px;
    border-bottom: 1px solid #e5e5e5;
    .header {
      font-size: 18px;
      line-height: 28px;
    }
  }
  .edit > div {
    cursor: pointer;
  }
  .contents {
    padding: 12px 14px;
    .view {
      color: #aaa;
    }
  }
}

.ObservationFieldPopover.popover,
.AnnotationPopover.popover,
.ActivityItemMenu {
  .search {
    line-height: 17px;
    &:not(:first-child) {
      margin-top: 6px;
    }
    .fa {
      color: $inat-green;
      margin-inline-end: 5px;
    }
    a {
      color: inherit;
      .menu-item-label {
        display: inline-block;
        vertical-align: top;
      }
    }
  }
  .added-by .view {
    float: left;
    padding-right: 5px;
  }
}

